# pagescope

./: .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  pyproject.toml
pagescope-skill/: SKILL.md  template.md
pagescope-skill/examples/: slow-site-diagnosis.md
src/pagescope/: __init__.py  __main__.py  crawler.py  orchestrator.py  session.py
src/pagescope/cli/: app.py  formatters.py  html_report.py
src/pagescope/data/: __init__.py  user_agents.json
src/pagescope/diagnostics/: accessibility.py  base.py  console.py  cookies.py  dom.py  forensics.py  interactive.py  network.py  performance.py  security.py
src/pagescope/export/: __init__.py  har.py
src/pagescope/models/: accessibility.py  common.py  console.py  cookies.py  crawler.py  dom.py  forensics.py  interactive.py  network.py  performance.py  report.py  security.py  websocket.py
src/pagescope/server/: mcp.py
src/pagescope/tui/: __init__.py  app.py  console.py  cookies.py  elements.py  network.py  performance.py  replay.py  security.py  styles.tcss  themes.py  websocket.py
tests/: conftest.py  test_accessibility_diagnostic.py  test_dom_diagnostic.py  test_interactive_diagnostic.py  test_security_diagnostic.py
tests/fixtures/: serve.py
tests/fixtures/sites/: accessibility-nightmare.html  api-failures.html  broken-layout.html  console-errors.html  index.html  security-issues.html  slow.html
